[tool.poetry]
name = "aiogevent"
version = "0.1.0"
description = ""
authors = ["Frédérique Mittelstaedt <hi@gfm.io>"]
license = "Apache 2"

[tool.poetry.dependencies]
python = "^3.9"
gevent = "*"
tulipcore = "^0.1.0-alpha.2"

[tool.poetry.dev-dependencies]
tox = "^3.23.0"
pytest = "^6.2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
